docs/7.57/md/abenbuilt_in_functions.md
---
title: "Built-In Functions"
description: |
  ABAP provides a set of built-in functions. A built-in function returns a return value for one or more arguments. There are functions with exactly one unnamed argument and functions with one or more named arguments. Built-in functions can be called functionally in certain operand positions(https://
version: "7.57"
category: "ui"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbuilt_in_functions.htm"
abapFile: "abenbuilt_in_functions.htm"
keywords: ["do", "if", "method", "data", "types", "abenbuilt", "functions"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Built-In Types, Data Objects, Functions, and Constructors](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbuilt_in.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Built-In Functions, ABENBUILT_IN_FUNCTIONS, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0
D%0ASuggestion for improvement:)

Built-In Functions

ABAP provides a set of built-in functions. A built-in function returns a return value for one or more arguments. There are functions with exactly one unnamed argument and functions with one or more named arguments.

Built-in functions can be called functionally in [certain operand positions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenoperands_expressions.htm). When a built-in function is called in an [operand position](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenexpression_positions.htm), the function is executed before the operand is used and the return value of the built-in function is used as the operand, in accordance with its data type.

-   [Syntax](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbuilt_in_functions_syntax.htm)
-   [Overview](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbuilt_in_functions_overview.htm)
-   [Obscuring with Methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbuilt_in_functions_hiding.htm)

Continue
[Built-In Functions, Syntax](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbuilt_in_functions_syntax.htm)
[Built-In Functions, Overview](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbuilt_in_functions_overview.htm)
[Built-In Functions, Hiding by Methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbuilt_in_functions_hiding.htm)